docs: fix spacing on homepage

--- a/packages/graphql-kimera-docs/src/css/custom.scss
+++ b/packages/graphql-kimera-docs/src/css/custom.scss
@@ -124,5 +124,5 @@ header h1 {
 }
 
 .home--container {
-  margin-bottom: 2rem;
+  margin: 2rem auto;
 }
